# LLM-Gateway

./: .gitignore  Cargo.toml  README.md
data/: app.db  init.sql
docs/: dispatcher_guide.md  ollama_client_guide.md
examples/: ali_client_demo.rs  ali_client_pool_demo.rs  ali_key_insert_demo.rs  dispatcher_db_demo.rs  ollama_client_demo.rs  ollama_quickstart.rs
logs/: app.2025-09-09  dev.2025-09-05  dev.2025-09-08  dev.2025-09-09
src/: lib.rs  logger.rs  main.rs
src/dao/: mod.rs
src/dao/cache/: cache.rs  mod.rs
src/dao/call_log/: call_log.rs  mod.rs
src/dao/model/: mod.rs  model.rs  preload.rs
src/dao/provider/: provider.rs
src/dao/provider_key_pool/: crypto.rs  mod.rs  preload.rs  provider_key_pool.rs
src/dao/system_config/: mod.rs  system_config.rs
src/llm_api/: dispatcher.rs  mod.rs
src/llm_api/ali/: client.rs
src/llm_api/ollama/: client.rs
src/llm_api/utils/: api_key_check.rs  chat_traits.rs  client.rs  client_pool.rs  mod.rs  model_check.rs  msg_structure.rs  tool_structure.rs
src/web/: mod.rs  server.rs
src/web/dto/: api_key_dto.rs  mod.rs  model_dto.rs  provider_dto.rs
src/web/handlers/: api_key_handler.rs  call_log_handler.rs  health_handler.rs  mod.rs  model_handler.rs  provider_handler.rs
src/web/middleware/: cors.rs
src/web/static/: app.js  index.html
tests/: api_key_round_robin_tests.rs  cache_tests.rs  call_log_tests.rs  client_tests.rs  model_crud_tests.rs  ollama_client_tests.rs  preload_test.rs  provider_key_pool_crypto_tests.rs  provider_key_pool_tests.rs  system_config_tests.rs
