[package]
name = "project_rust_learn"
version = "0.1.0"
edition = "2024"

[lib]
name = "project_rust_learn"
path = "src/lib.rs"

[[bin]]
name = "project_rust_learn"
path = "src/main.rs"

[dependencies]
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-async-std-native-tls"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.6" # 用于处理流式响应
moka = { version = "0.12", features = ["future"] }
futures-util = "0.3"
# 日志相关依赖
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
log = "0.4"
# 加密相关依赖
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
lazy_static = "1.5.0"
futures = "0.3.31"
async-trait = "0.1.89"
# Web框架相关依赖
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"
